--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,14 +2,20 @@
 <html>
   <head>
     <title>Bugno</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <%= stylesheet_link_tag "inter-font", "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag "tailwind", "data-turbo-track": "reload" %>
 
     <%= stylesheet_link_tag 'application', media: 'all' %>
+    <%= javascript_importmap_tags %>
   </head>
 
   <body>
+    <header class="fixed flex justify-end w-screen">
+      <%= link_to 'Exit', destroy_user_session_path, class: 'px-2 py-1 rounded bg-red-200' %>
+    </header>
     <%= yield %>
   </body>
 </html>
