Style some devise views

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,3 +1,4 @@
+<%= link_to 'Exit', destroy_user_session_path, class: 'px-2 py-1 rounded bg-red-200 text-xl' %>
 <h1 class="text-xl py-4">Projects</h1>
 <ul>
   <%= render @projects %>
