--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container mx-auto">
+<div class="container mx-auto px-8 py-4">
   <h1 class="text-4xl mb-4">Turbo Bugno</h1>
   <h2 class="mb-4 text-3xl">Change your password</h2>
 
@@ -11,20 +11,24 @@
   <%= f.hidden_field :reset_password_token %>
 
   <div class="mb-4">
-    <%= f.label :password, "New password" %><br />
+    <div class="mb-2">
+      <%= f.label :password, "New password" %>
+    </div>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em><br />
     <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password", required: true %>
+    <%= f.password_field :password, autofocus: true, autocomplete: "new-password", required: true, class: 'w-full md:w-auto' %>
   </div>
 
   <div class="mb-4">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password", required: true %>
+    <div class="mb-2">
+      <%= f.label :password_confirmation, "Confirm new password" %>
+    </div>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", required: true, class: 'w-full md:w-auto' %>
   </div>
 
   <div class="mb-4">
-    <%= f.submit "Change my password", class: 'px-2 py-1 rounded bg-blue-500 hover:bg-blue-600 text-white cursor-pointer' %>
+    <%= f.submit "Change my password", class: 'px-2 py-1  w-full md:w-auto rounded bg-blue-500 hover:bg-blue-600 text-white cursor-pointer' %>
   </div>
   <% end %>
 
