--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container mx-auto">
+<div class="container mx-auto px-8 py-4">
   <h1 class="text-4xl mb-4">Turbo Bugno</h1>
   <h2 class="mb-4 text-3xl">Forgot your password?</h2>
 
@@ -6,12 +6,14 @@
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="mb-4">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", required: true %>
+    <div class="mb-2">
+      <%= f.label :email %>
+    </div>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", required: true, class: 'w-full md:w-auto' %>
   </div>
 
   <div class="mb-4">
-    <%= f.submit "Send me reset password instructions", class: 'px-2 py-1 rounded bg-blue-500 hover:bg-blue-600 text-white cursor-pointer' %>
+    <%= f.submit "Send me reset password instructions", class: 'px-2 py-1  w-full md:w-auto rounded bg-blue-500 hover:bg-blue-600 text-white cursor-pointer' %>
   </div>
   <% end %>
 
