--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Bugno</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1, user-scalable=no">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag "inter-font", "data-turbo-track": "reload" %>
