Add mobile navigation & rememberable

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -60,6 +60,10 @@
   display: none;
 }
 
+.navigation-checkbox:not(:checked) + .navigation {
+  display: none;
+}
+
 .assignee-container {
   position: relative;
 }
