--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,3 +1,3 @@
-<li class="mb-4">
-  <%= link_to project.name, project_path(project), class: 'px-4 py-2 bg-gray-100 hover:bg-gray-200 rounded' %>
+<li>
+  <%= link_to project.name, project_path(project), target: '_top', class: 'py-2 block text-xl hover:bg-gray-100' %>
 </li>
