Update navigation && add deletep project

--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,3 +1,3 @@
 <li>
-  <%= link_to project.name, project_path(project), target: '_top', class: 'py-2 block text-xl hover:bg-gray-100' %>
+  <%= link_to project.name, project_path(project), target: '_top', class: 'py-2 block hover:bg-gray-100' %>
 </li>
