--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -1,4 +1,4 @@
-<div class="rounded-md my-3 bg-white py-1 px-2 event-container hover:bg-gray-50 relative shadow <%= event.status_previously_changed? ? 'event-status-changed' : nil %>" id=<%= dom_id(event) %> draggable="true" data-action="dragstart->board#drag" data-status="<%= event.status %>">
+<div class="rounded-md my-3 text-sm bg-white py-1 px-2 event-container hover:bg-gray-50 relative shadow <%= event.status_previously_changed? ? 'event-status-changed' : nil %>" id=<%= dom_id(event) %> draggable="true" data-action="dragstart->board#drag" data-status="<%= event.status %>">
   <%= link_to event_path(event), class: 'event-link', target: '_top' do %>
   <% end %>
   <div>
@@ -16,7 +16,7 @@
           <%= event.occurrence_count %>
         </span>
       </p>
-      <p class="flex items-center">
+      <p class="flex items-center text-gray-600">
         <%= distance_of_time_in_words(event.last_occurrence_at || event.created_at, Time.now.in_time_zone) %>
         <span class="mx-1">ago</span>
         <%= form_with model: event, method: :delete, class: 'hidden md:block' do |f|%>
