--- a/app/views/events/_trace.html.erb
+++ b/app/views/events/_trace.html.erb
@@ -1,6 +1,6 @@
-<div class="rounded border mb-4">
+<div class="rounded border mb-4 text-base">
   <%= label_tag "trace_#{trace_counter}", class: 'container-label cursor-pointer flex flex-col md:flex-row md:justify-between md:items-center' do %>
-    <h2 class="md:px-8 text-xl font-semibold p-4">
+    <h2 class="md:px-8 font-semibold p-4">
       <%= trace.filename %>
     </h2>
     <button type="button" data-action="click->event#copyTraceFilename" data-filename="<%= trace.filename %>" class="mx-4 mb-2 md:mb-0 rounded p-1 bg-green-400 hover:bg-green-500 text-white">Copy</button>
