--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,5 +1,5 @@
 <%= turbo_stream_from @event %>
-<div class="container mx-auto px-4 py-4 shadow">
+<div class="container mx-auto px-4 py-4 shadow text-sm">
   <div class="px-2 md:px-8 mb-4">
     <h1 class="text-xl mb-4"><%= @event.title %></h1>
     <h2 class="mb-4 text-xl"><%= @event.message %></h2>
