--- a/app/views/shared/_management.html.erb
+++ b/app/views/shared/_management.html.erb
@@ -1,14 +1,14 @@
 <div class="flex flex-col">
-  <h2 class="text-2xl font-bold">Management:</h2>
+  <h2 class="font-bold">Management:</h2>
   <ul>
     <li>
-      <%= link_to 'Board', project_path(@project), class: 'py-2 block text-xl hover:bg-gray-100' %>
+      <%= link_to 'Board', project_path(@project), class: 'py-2 block hover:bg-gray-100' %>
     </li>
     <li>
-      <%= link_to 'Team', project_members_path(@project), class: 'py-2 block text-xl hover:bg-gray-100' %>
+      <%= link_to 'Team', project_members_path(@project), class: 'py-2 block hover:bg-gray-100' %>
     </li>
     <li>
-      <%= link_to 'Settings', project_settings_path(@project), class: 'py-2 block text-xl hover:bg-gray-100' %>
+      <%= link_to 'Settings', project_settings_path(@project), class: 'py-2 block hover:bg-gray-100' %>
     </li>
   </ul>
 </div>
