--- a/app/views/event_mailer/assign.html.slim
+++ b/app/views/event_mailer/assign.html.slim
@@ -1,6 +1,6 @@
 .main-container
   = render partial: 'event_mailer/shared/assigner_photo'
-  .header = t('mailer.user_assigned_you', assigner_nickname: @assigner.nickname, event_title: @event.title)
+  .header = "#{@assigner.nickname} has assigned you for #{@event.title}"
   = render partial: 'event_mailer/shared/project_section'
   = render partial: 'event_mailer/shared/message_section'
   = render partial: 'event_mailer/shared/url_section' if @event.url.present?
