--- a/app/views/event_mailer/high_frequency.html.slim
+++ b/app/views/event_mailer/high_frequency.html.slim
@@ -1,7 +1,7 @@
 .main-container
   = render partial: 'event_mailer/shared/high_frequency_image'
-  .header = t('mailer.high_requency_alert', project_name: @event.project.name)
-  .header = t('mailer.high_requency_in_last_minute', title: @event.title, frequency: @frequency)
+  .header = "High frequency alert in #{@event.project.name}!"
+  .header = "#{@event.title} #{@frequency} times in last minute."
   = render partial: 'event_mailer/shared/project_section'
   = render partial: 'event_mailer/shared/message_section'
   = render partial: 'event_mailer/shared/url_section' if @event.url.present?
