--- a/app/views/event_mailer/shared/_assigner_photo.html.slim
+++ b/app/views/event_mailer/shared/_assigner_photo.html.slim
@@ -1,3 +1,3 @@
 .logo-wrapper
-  = link_to t('web_url.production') do
+  = link_to root_url do
     = image_tag(attachments['assigner.png'].url, class: 'top-image rounded')
