--- a/app/views/event_mailer/shared/_backtrace_section.html.slim
+++ b/app/views/event_mailer/shared/_backtrace_section.html.slim
@@ -1,4 +1,4 @@
 .section
-  .section-title = t('mailer.backtrace')
+  .section-title backtrace
   .divider
   .backtrace = render partial: 'event_mailer/shared/backtrace', collection: @event.backtrace[0..10], as: :line
