--- a/app/views/event_mailer/shared/_bugno_logo.html.slim
+++ b/app/views/event_mailer/shared/_bugno_logo.html.slim
@@ -1,3 +1,3 @@
 .logo-wrapper
-  = link_to t('web_url.production') do
+  = link_to root_url do
     = image_tag(attachments['bugno-logo.png'].url, class: 'top-image')
