--- a/app/views/event_mailer/shared/_chunk_of_code_section.html.slim
+++ b/app/views/event_mailer/shared/_chunk_of_code_section.html.slim
@@ -1,7 +1,7 @@
 .section
-  .section-title = t('mailer.code_snippet')
+  .section-title code_snippet
   .divider
   .filename
-    span.section-title> = t('mailer.file_path')
+    span.section-title> file path:
     span = @chunk_of_code['filename']
   .code-snippet = render partial: 'event_mailer/shared/chunk_of_code', object: @chunk_of_code, as: :line
