--- a/app/views/event_mailer/shared/_exception_template.html.slim
+++ b/app/views/event_mailer/shared/_exception_template.html.slim
@@ -1,6 +1,9 @@
 .main-container
   = render partial: 'event_mailer/shared/bugno_logo'
-  .header = t("mailer.#{@action_name}_section", project_name: @event.project.name, times: @occurrence_count)
+  - if @action_name == 'exception'
+    .header = "New exception appeared in #{@event.project.name}!"
+  - else
+    .header = "An exception occurred for #{@occurrence_count} times in #{@event.project.name}!"
   = render partial: 'event_mailer/shared/project_section'
   = render partial: 'event_mailer/shared/message_section'
   = render partial: 'event_mailer/shared/url_section' if @event.url.present?
