--- a/app/views/event_mailer/shared/_high_frequency_image.html.slim
+++ b/app/views/event_mailer/shared/_high_frequency_image.html.slim
@@ -1,3 +1,3 @@
 .logo-wrapper
-  = link_to t('web_url.production') do
+  = link_to root_url do
     = image_tag(attachments['high_frequency.png'].url, class: 'high-frequency-image')
