--- a/app/views/event_mailer/shared/_message_section.html.slim
+++ b/app/views/event_mailer/shared/_message_section.html.slim
@@ -1,5 +1,5 @@
 .section
-  .section-title = t('mailer.message')
+  .section-title message
   .divider
   span.font-weight-bold> = "#{@event.title}:"
   span = @event.message.truncate(140)
