--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
   </head>
 
   <body>
-    <%= render 'shared/navigation' if current_user %>
+    <div class="md:hidden">
+      <%= render 'shared/mobile_navigation' if current_user %>
+    </div>
     <%= yield %>
   </body>
 </html>
