--- a/app/views/members/_member.html.erb
+++ b/app/views/members/_member.html.erb
@@ -3,7 +3,9 @@
     <%= image_tag member.user.image, class: 'h-24 w-24 rounded-full mx-auto' %>
     <p class="mt-4"><%= member.role %></p>
     <p><%= member.user.nickname %></p>
-    <p><%= member.user.email %></p>
+    <% if current_user_owner? %>
+      <p class="text-sm"><%= member.user.email %></p>
+    <% end %>
   </div>
   <% if current_user_owner? && member.collaborator? %>
     <%= form_with url: project_member_path(@project, member), method: :delete, class: 'mt-4' do |f| %>
