--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,14 @@
   </head>
 
   <body>
-    <div class="md:hidden">
-      <%= render 'shared/mobile_navigation' if current_user %>
-    </div>
+    <% if current_user %>
+      <div class="md:hidden">
+        <%= render 'shared/mobile_navigation'%>
+      </div>
+      <div class="hidden md:block">
+        <%= render 'shared/navigation'%>
+      </div>
+    <% end %>
     <%= yield %>
   </body>
 </html>
