--- a/app/views/shared/_management.html.erb
+++ b/app/views/shared/_management.html.erb
@@ -2,7 +2,7 @@
   <h2 class="font-bold">Management:</h2>
   <ul>
     <li>
-      <%= link_to 'Board', project_path(@project), class: 'py-2 block hover:bg-gray-100' %>
+      <%= link_to 'Events', project_path(@project), class: 'py-2 block hover:bg-gray-100' %>
     </li>
     <li>
       <%= link_to 'Team', project_members_path(@project), class: 'py-2 block hover:bg-gray-100' %>
