--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -34,17 +34,17 @@
   </div>
   <div class="traces" data-controller="event">
     <% if @event.project_trace? %>
-      <button role="button" class="fixed h-14 bottom-56 right-8 z-20 text-white rounded-full bg-gray-700 text-3xl w-14 p-2 cursor-pointer" data-action="click->event#navigate">
+      <button role="button" class="fixed h-14 md:bottom-24 bottom-56 right-8 z-20 text-white rounded-full bg-gray-700 text-3xl w-14 p-2 cursor-pointer" data-action="click->event#navigate">
         <%= image_tag 'up.svg', class: 'filter invert hover:opacity-75 transform rotate-180' %>
       </button>
     <% end %>
-    <button role="button" class="fixed h-14 bottom-40 right-8 z-20 text-white rounded-full bg-gray-700 text-3xl w-14 p-2 cursor-pointer" data-action="click->event#top">
+    <button role="button" class="fixed h-14 md:bottom-8 bottom-40 right-8 z-20 text-white rounded-full bg-gray-700 text-3xl w-14 p-2 cursor-pointer" data-action="click->event#top">
       <%= image_tag 'up.svg', class: 'filter invert hover:opacity-75' %>
     </button>
     <%= render partial: 'events/trace', collection: @event.traces %>
   </div>
 </div>
 
-<%= link_to project_path(@project), class: 'fixed h-14 bottom-24 right-8 z-20 text-white rounded-full bg-gray-700 text-3xl w-14 p-2' do %>
+<%= link_to project_path(@project), class: 'md:hidden fixed h-14 bottom-24 right-8 z-20 text-white rounded-full bg-gray-700 text-3xl w-14 p-2' do %>
   <%= image_tag 'up.svg', class: 'filter invert hover:opacity-75 transform -rotate-90' %>
 <% end %>
