--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,3 +1,1 @@
-<li>
-  <%= link_to project.name, project_path(project), target: '_top', class: 'py-2 block hover:bg-gray-100' %>
-</li>
+<%= link_to project.name, project_path(project), class: 'text-center py-32 text-2xl text-gray-600 px-16 w-80 block bg-gray-50 hover:bg-gray-100 shadow rounded mb-20 mr-10' %>
