--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -34,7 +34,14 @@
         <%= link_to 'Last cccurrence', event_path(@event.last_occurrence), class: 'rounded bg-gray-100 hover:bg-gray-200 p-2' %>
       </p>
     <% end %>
-    <%= link_to 'Parent event', event_path(@event.parent_id), class: 'rounded bg-gray-100 hover:bg-gray-200 p-2' if @event.occurrence? %>
+    <% if @event.occurrence? %>
+      <p class="mb-4">
+        <%= link_to 'Parent event', event_path(@event.parent_id), class: 'rounded bg-gray-100 hover:bg-gray-200 p-2' %>
+      </p>
+    <% end %>
+    <p class="mb-2">
+      <%= link_to 'Request and headers', event_request_params_path(@event), class: 'rounded bg-gray-100 hover:bg-gray-200 p-2' %>
+    </p>
   </div>
   <div class="flex flex-col md:flex-row px-2 md:px-8 mb-4">
     <%= render partial: 'events/assignee', locals: { event: @event } %>
