Fix mobile view bugs

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
       <div class="md:hidden">
         <%= render 'shared/mobile_navigation'%>
       </div>
-      <div class="hidden md:block">
+      <div class="hidden md:block sticky top-0">
         <%= render 'shared/navigation'%>
       </div>
     <% end %>
