--- a/app/views/shared/_mobile_navigation.html.erb
+++ b/app/views/shared/_mobile_navigation.html.erb
@@ -1,6 +1,6 @@
 <%= label_tag :projects, class: 'fixed h-14 bottom-8 right-8 z-20 flex container-label' do %>
-  <div class="rounded-full bg-gray-700 w-14 p-2 cursor-pointer">
-    <%= image_tag 'logo.svg', class: 'filter invert hover:opacity-75' %>
+  <div class="rounded-full bg-gray-100 shadow w-14 p-2 cursor-pointer">
+    <%= image_tag 'logo.svg' %>
   </div>
 <% end %>
 <%= check_box_tag :projects, :projects, false, class: 'hidden container-checkbox' %>
