--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -1,4 +1,4 @@
-<div class="sticky px-2 py-1 flex justify-between items-center shadow bg-gray-100 mb-2">
+<div class="px-2 py-1 flex justify-between items-center shadow bg-gray-100 mb-2">
   <div class="flex items-center font-bold text-gray-600 text-sm">
     <%= link_to root_path, class: 'w-12 p-1 inline-block mr-4' do %>
       <%= image_tag 'logo.svg', class: 'hover:opacity-100 opacity-75' %>
