--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -32,6 +32,7 @@
     <% end %>
   </div>
   <div>
+    <%= link_to 'Contact', "mailto:#{Rails.application.credentials.contact_email}?subject = Bugno", class: 'py-2 font-bold text-gray-600 hover:text-gray-800 block md:inline-block px-4' %>
     <%= link_to 'Exit', destroy_user_session_path, class: 'py-2 font-bold text-gray-600 hover:text-gray-800 block md:inline-block px-4' %>
   </div>
 </div>
