--- a/app/views/settings/edit.html.erb
+++ b/app/views/settings/edit.html.erb
@@ -6,4 +6,4 @@
       <%= f.submit 'Update', class: 'ml-1 p-1 rounded bg-green-500 hover:bg-green-600 text-white' %>
     </p>
   <% end %>
-</end>
+</div>
