add turtle emoji to chat gpt placeholder

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -49,7 +49,7 @@
   </div>
   <div class="md:px-8 mb-4 py-2 border rounded border-blue-300 font-semibold">
     <%= turbo_frame_tag 'gpt_help', src: event_gpt_path(@event) do %>
-        Asking ChatGPT...
+        Asking ChatGPT... 🐢
     <% end %>
   </div>
   <div class="traces" data-controller="event">
