--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -26,7 +26,7 @@
     <% end %>
     <p class="mb-2 py-2">This appeared: <%= @event.created_at %></p>
     <p class="mb-2 py-2">Last appeared: <%= @event.last_occurrence_at || @event.created_at%></p>
-    <% if @event.parent? && @event.last_occurrence %>
+    <% if @event.parent? && @event.occurrence_count.positive? %>
       <p class="mb-4 py-2">
         <span>
           Occurrences total: <%= @event.occurrence_count %>
